# docs/swagger.json
@@ -701,7 +701,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Order"
+                            "$ref": "#/definitions/models.OrderRequest"
                         }
                     }
                 ],
@@ -1191,6 +1191,17 @@
                     "$ref": "#/definitions/models.Users"
                 },
                 "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.OrderRequest": {
+            "type": "object",
+            "properties": {
+                "product_id": {
+                    "type": "integer"
+                },
+                "quantity": {
                     "type": "integer"
                 }
             }
